Fixed: Text overflow & layout issue

--- a/src/styles/sections/__navbar.scss
+++ b/src/styles/sections/__navbar.scss
@@ -32,4 +32,6 @@
 
 #navbar__explorer {
     padding: var(--spacer-2);
+    overflow-y: auto;
+    height: calc(100vh - 76px);
 }
